# GObjectCreator3

./: ChangeLog  Makefile.am  README  configure.ac
doc/: README.txt
grammar/: Makefile.am  create_parser.sh  gobjcreator3.bovg
m4/: Makefile.am  bovinus_check.m4  bovinus_check.sh  faberscriptorum_check.m4  faberscriptorum_check.sh
src/: Makefile.am
src/gobjcreator3/: Makefile.am  __init__.py.in  ast_visitor.py  compiler.py  gobjcreator_parser.py  include_dirs.py  interpreter.py  introspection.py  misc.py  module.py  parameter.py  parser.py  preprocessor.py
src/gobjcreator3/codegen/: Makefile.am  c_code_generator.py  c_marshaller_generator.py  code_generator.py  name_creator.py  output.py
src/gobjcreator3/codegen/templates/: Makefile.am
src/gobjcreator3/codegen/templates/c/: genum_header.template  genum_source.template  gerror_header.template  gflags_header.template  gflags_source.template  ginterface_header.template  ginterface_source.template  gobject_header.template  gobject_header_prot.template  gobject_source.template  interfaces.template  introspection.template  marshaller_header.template  marshaller_source.template  methods.template  properties.template  signals.template  structures.template
src/gobjcreator3/model/: Makefile.am  attribute.py  clsintf.py  genum.py  gerror.py  gflags.py  ginterface.py  gobject.py  introspection.py  method.py  module.py  property.py  signal.py  type.py  visibility.py
unit-test/: Makefile.am  codegen_test.py  compiler_test.py  glib.goc3  model_test.py  mydemo.goc3  mytypes.goc3  parser_test.py  performance_test.py  test.goc3
