AC_PREREQ([2.69])
AC_INIT([gobjectcreator3], [0.8.2], [tbollmeier@web.de])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([1.11])
AM_SILENT_RULES([yes])
AM_PATH_PYTHON([3.2])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([
Makefile
bin/Makefile
doc/Makefile
grammar/Makefile
m4/Makefile
src/Makefile
src/gobjcreator3/Makefile
src/gobjcreator3/__init__.py
src/gobjcreator3/codegen/Makefile
src/gobjcreator3/codegen/templates/Makefile
src/gobjcreator3/model/Makefile
unit-test/Makefile
])
