templatesdir = $(pythondir)/gobjcreator3/codegen/templates/c

templates_PYTHON = \
	c/genum_header.template \
	c/genum_source.template \
	c/gflags_header.template \
	c/gflags_source.template \
	c/ginterface_header.template \
	c/ginterface_source.template \
	c/gobject_header_prot.template \
	c/gobject_header.template \
	c/gobject_source.template \
	c/interfaces.template \
	c/marshaller_header.template \
	c/marshaller_source.template \
	c/methods.template \
	c/properties.template \
	c/signals.template \
	c/structures.template 
